# KasbLink

./: .gitignore  Makefile  README.md  pyproject.toml  workplan
apps/: filters.py  serializers.py  urls.py  views.py
apps/fixtures/: categories.json  regions_districts.json
apps/migrations/: 0001_initial.py
apps/models/: __init__.py  categories.py  chats.py  interactions.py  managers.py  orders.py  regions.py  users.py
root/: settings.py  urls.py
